<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="task_list_new_task">Add new task</string>
    <plurals name="task_list_days_left">
        <item quantity="zero">today</item>
        <item quantity="other">%d days left</item>
    </plurals>
    <plurals name="task_list_days_ago">
        <item quantity="zero">today</item>
        <item quantity="other">%d days ago</item>
    </plurals>
    <string name="task_list_delete_task_dialog_message">Are you sure you want to delete the task «%s»? All activity history will also be deleted.</string>
    <string name="task_list_delete_task_dialog_checkbox">Don\'t show again</string>
    <string name="task_list_sort">Sort</string>
    <string name="task_list_sort_by_name">By name</string>
    <string name="task_list_sort_by_creation_date">By creation date</string>
    <string name="task_list_sort_by_priority">By priority</string>
    <string name="task_list_sort_by_due_date">By due date</string>

    <string name="add_task_title">Add Task</string>
    <string name="add_task_task_name">Task name</string>
    <string name="add_task_enter_task">Enter task</string>
    <string name="add_task_priority">Priority</string>
    <string name="add_task_frequency">Frequency</string>
    <string name="add_task_every">Every</string>
    <string name="add_task_current_state">Current state</string>
    <string name="add_task_state_good">Good</string>
    <string name="add_task_state_about_time">About time</string>
    <string name="add_task_note">Note</string>
    <string name="add_task_enter_note">Enter note</string>
    <string name="add_task_minus_sign">-</string>
    <string name="add_task_plus_sign">+</string>
    <string name="add_task_frequency_value_error">The value must be greater than 0</string>

    <string name="task_detail_title">Task</string>
    <string name="task_detail_priority">Priority:</string>
    <string name="task_detail_complete">Complete:</string>
    <string name="task_detail_schedule">Every:</string>
    <string name="task_detail_category">Category:</string>
    <string name="task_detail_completed_earlier">Completed earlier</string>
    <string name="task_detail_done">Done</string>
    <string name="task_detail_select_date">Select date</string>
    <string name="task_detail_delete_task_dialog_message">Are you sure you want to delete the task? All activity history will also be deleted.</string>
    <plurals name="task_detail_complete_days_left">
        <item quantity="zero">today</item>
        <item quantity="one">tomorrow</item>
        <item quantity="other">in %d days</item>
    </plurals>
    <plurals name="task_detail_complete_days_ago">
        <item quantity="zero">today</item>
        <item quantity="one">yesterday</item>
        <item quantity="other">%d days ago</item>
    </plurals>

    <string name="todo_list_title">To-do list</string>
    <string name="todo_list_period">Period</string>
    <string name="todo_list_group">Group</string>
    <string name="todo_list_group_by_date">By date</string>
    <string name="todo_list_group_by_category">By category</string>
    <plurals name="todo_list_period_days">
        <item quantity="zero">Today</item>
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>

    <plurals name="todo_list_period_weeks">
        <item quantity="zero">Today</item>
        <item quantity="one">%d week</item>
        <item quantity="other">%d weeks</item>
    </plurals>
    <string name="todo_list_period_today">Today</string>
    <string name="todo_list_period_all">All</string>
    <string name="todo_list_placeholder_text">All task completed</string>
</resources>