<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/sort_tasks"
        android:icon="@drawable/ic_sort"
        android:title="@string/task_list_sort"
        android:visible="false"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/sort_by_due_date"
                android:title="@string/task_list_sort_by_due_date" />
            <item
                android:id="@+id/sort_by_priority"
                android:title="@string/task_list_sort_by_priority" />
            <item
                android:id="@+id/sort_by_name"
                android:title="@string/task_list_sort_by_name" />
            <item
                android:id="@+id/sort_by_creation_date"
                android:title="@string/task_list_sort_by_creation_date" />
        </menu>
    </item>

    <item
        android:id="@+id/add_task"
        android:icon="@drawable/ic_add"
        android:title="@string/task_list_new_task"
        app:showAsAction="ifRoom" />
</menu>