<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.beautydiary.feature_tasks.vm.TodoListViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/appbar"
            layout="@layout/include_appbar"
            app:backNavigation="@{true}"
            app:title="@{@string/todo_list_title}" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/layout_fragment_margin"
            android:orientation="vertical"
            app:goneIf="@{vm.isLoading}"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutStyle.Dropdown"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:hint="@string/todo_list_period"
                    android:labelFor="@id/period_selector"
                    app:hintAnimationEnabled="false"
                    app:hintTextColor="?attr/colorPrimaryDark">

                    <AutoCompleteTextView
                        android:id="@+id/period_selector"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutStyle.Dropdown"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_weight="0.5"
                    android:hint="@string/todo_list_group"
                    android:labelFor="@id/group_selector"
                    app:hintAnimationEnabled="false"
                    app:hintTextColor="?attr/colorPrimaryDark">

                    <AutoCompleteTextView
                        android:id="@+id/group_selector"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:layoutAnimation="@anim/anim_recycler_view"
                app:goneIf="@{vm.showPlaceholder}"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                app:goneIfNot="@{vm.showPlaceholder}">

                <androidx.constraintlayout.widget.Placeholder
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="0.2" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="0.4"
                    android:scaleType="fitCenter"
                    android:src="@drawable/base_placeholder" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|bottom"
                    android:layout_marginTop="24dp"
                    android:layout_weight="0.4"
                    android:gravity="top|center"
                    android:text="@string/todo_list_placeholder_text"
                    android:textAppearance="?attr/textAppearanceBody1" />
            </LinearLayout>
        </LinearLayout>

        <include
            layout="@layout/include_loading_view"
            app:isLoading="@{vm.isLoading}" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>